--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
     <body>
         <header>
             <h1>Word guessing game</h1>
-            <p>alfdkjsadlkjfsdlka</p>
+            <button id="startBtn">Start Game</button>
         </header>
         
         <main>
-            <section></section>
+            <section>
+                <p id="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea obcaecati, ratione numquam iure quos maiores. Magnam autem iusto esse aspernatur, ullam numquam in fugit itaque, reiciendis vitae ea nisi eos!</p>
+            </section>
 
-            <section></section>
+            <section>
+                <h2>Scoreboard</h2>
+                <p>Wins:  ______</p>
+                <p>Losses:  ______</p>
+                <p id="timer"> Time left</p>
+                <button id="resetBtn">Reset</button>
+            </section>
+            <script src="./Assets/js/logic.js"></script>
         </main>
     </body>
 
